src/index.css
/*=============== GOOGLE FONTS ===============*/
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

/*=============== VARIABLES CSS ===============*/
:root {

  /*==========Theme Colors ==========*/
  /* background color */
  --bg-color-1: #ffffff;
  --bg-color-2: #000000;
  --bg-color-3: #fa9b23;
  /* --bg-color-3:#f2f6fc; */
 /* --color-4: #0d6efd; */
 --bg-color-4: #2f5db1;
 --bg-color-5: #ff2525;
 --bg-color-6:#37bf4a;
 --bg-color-7:#f2f6fc;
 --bg-color-8: blue;
 --bg-color-9:#96adff;
 --box-shadow: 0 5px 10px 0px rgb(0 0 0 / 50%);
 --box-shadow-2: blur(10px);
 --card-h-100: 100vh;
 --card-h-90: 90vh;
 


  
  /* Text color */
  --color-1: #ffffff;
  --color-2: #000000;
  --color-3: #fa9b23;
  /* --color-4: #0d6efd; */
  --color-4: #2f5db1;
  --color-5: #ff2525;
  --color-6: #37bf4a;
  /* --color-6: #f2f6fc; */
 --color-7: blue;




}

/*=============== REUSABLE CSS CLASSES ===============*/
/*====== class define for values ======*/

/* text background color class */
.bg-color-1{background-color: var(--bg-color-1) ;}
.bg-color-2{background-color: var(--bg-color-2) !important ;}
.bg-color-3{background-color: var(--bg-color-3)!important ;}
.bg-color-4{background-color: var(--bg-color-4) !important ;}
.bg-color-5{background-color: var(--bg-color-5) !important ;}
.bg-color-6{background-color: var(--bg-color-6) !important ;}
.bg-color-7{background-color: var(--bg-color-7) !important ;}
.bg-color-7{background-color: var(--bg-color-7) !important ;}
.bg-color-8{background-color: var(--bg-color-8) !important ;}
.bg-color-9{background-color: var(--bg-color-9) !important ;}


.card-shadow{
  box-shadow:var(--box-shadow);
}
.box-shadow-2{
  backdrop-filter:var(--box-shadow-2);
}
.card-h-100{
  height:var(--card-h-100);
}
.card-h-90{
  height:var(--card-h-90);
}



/* text color class */
.color-1{color: var(--color-1) !important;}
.color-2{color: var(--color-2) !important;}
.color-3{color: var(--color-3) !important;}
.color-4{color: var(--color-4)!important ;}
.color-5{color: var(--color-5) !important;}
.color-6{color: var(--color-6) !important;}
.color-7{color: var(--color-7) !important;}




/*=============== BASE ===============*/
/* universal */
* {
  padding: 0%;
  margin: 0%;
  font-family: 'Nunito', sans-serif;
  text-decoration: none !important;
}

body {
  background-color: #ffffff;
  color: #000000;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

.text-editor p {
  line-height: 20px;
  padding: 0px!important;
  margin: 0px !important;
}

/* For Container class */
@media screen and (width > 576px){
  .container-px-5{
    padding:0rem 3rem!important;
  }
}

/*=============== Index page CSS ===============*/

/* background Imgae */
#bg-image {
  background-repeat: no-repeat !important;
  background-attachment: fixed !important;
  background-size: 100% 100% !important;
  background-image: url(/Images/home/background-imgae.png);
}

/* Our serviecs */
img.btn-icon {
  width: 50px;
}

.nav-link {
  color: var(--color-4);
  background-color: var(--bg-color-1) !important;
}

.nav-pills .nav-link.active,
.nav-pills .show>.nav-link {
  color: var(--color-1);
  background-color: var(--bg-color-3) !important;
}
.nav-pills .nav-link{
  color: var(--color-3);
  background-color: var(--bg-color-1) !important;
}

.Slider-3 {
  justify-content: center;
}

/* contact us */
/* iframr css */
.mapouter {
  position: relative;
  text-align: right;
  width: 100%;
  height: 400px;
}

.gmap_canvas {
  overflow: hidden;
  background: none !important;
  width: 100%;
  height: 400px;
}

.gmap_iframe {
  height: 400px !important;
}


.cursor-pointer{
  cursor: pointer;
}

/* p{
  font-size: 1.3rem;
} */

/* deepak */
.otp-input{
  border-radius: 0.5rem;
  border-color: rgb(4, 4, 255);
  outline: none;
  /* color: var(--color-4); */
  min-height: 3rem;
  min-width: 2rem;
}
.otp-input:focus{
  border-color: var(--color-6);
}

.active_item{
  background-color: white;
  border-radius: 5px;
   color: blue !important
}
.paginate-li{

  display: flex;
  align-items: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
  border-radius: 2rem;
}


.btn:hover{
    background-color:var(--bg-color-3);
    color: var(--color-1);
}

.heading{
  color: var(--color-4);
}

.card-image{
  max-height:15rem;
}

/* .card-body:hover{
  background-color: var(--bg-color-3);
  color: #ffffff;
} */

.cardView:hover{
  background-color: var(--bg-color-2);
  color: #ffffff;
}

.card-zoom-in-out-box:hover {
  background: var(--bg-color-1) !important;
  color: var(--color-2) !important;
  animation: zoom-in-zoom-out 1s ease infinite;
   transform: scale(1.05, 1.05);
}

/* @keyframes zoom-in-zoom-out {
  0% {
    transform: scale(1, 1);
  }
  50% {
    transform: scale(1.1, 1.1);
  }
  100% {
    transform: scale(1, 1);
  }
} */

/* Works on Firefox */
/* * {
  scrollbar-width: thin;
  scrollbar-color: blue #f2f6fc;
} */

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  /* width: 0px; */
  /* height: 10px; */
}
/* .overflow-auto::-webkit-scrollbar {
} */

/* *::-webkit-scrollbar-track {
  background: f2f6fc;
}

*::-webkit-scrollbar-thumb {
  background-color: blue;
  border-radius: 10px;
  border: 1px solid #f2f6fc;
  ;
} */

.social-link{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 2.5rem;
  /* background-color: #2d1b1b; */
}
.social-link:hover{
  border: 2px solid orange;
}

.popup-right-side-form{
  margin-top: 100px;
}

.cursor-pointer{
  cursor: pointer;
}

.recent-post:hover{
  color: #ff2525;
  text-decoration: underline !important;
}

.react-datepicker-wrapper{
  width: 100%;
}

.w-55{
  width: 55%;
}

.w-adj{
  width: fit-content;
}

#statement-pdf table {
  width: 100%;
  table-layout: fixed;  /* Ensure consistent column width */
  word-wrap: break-word;  /* Prevent long text from overflowing */
}

#statement-pdf {
  overflow: auto;
}

@media print {
  table {
    page-break-inside: auto;
  }

  tr {
    page-break-inside: avoid;
    page-break-after: auto;
  }

  thead {
    display: table-header-group;
  }

  tfoot {
    display: table-footer-group;
  }
}

.pdf-font-table{
  font-size: 0.07in;
}

.pdf-font{
  font-size: 0.12in;
}

.bg-gray-light{
  background-color: #d4d1d1;
}

/* Define the page height to fit a specific PDF page size */
.page {
  width: 100%; /* Adjust based on your content width */
  height: 750px;  /* A4 landscape height in pixels */
  position: relative;
  page-break-after: always; /* Ensure page breaks after each content block */
}

/* .position-relative-pg{
  position: relative ;
} */



.bg-logo1{
background-color: #182f59;
}

.bg-logo2{
  background-color: #b2badf;
}

.bg-logo3{
  background-color: #f99b23;
}

.pdf-logo1{
  border-color: #182f59 !important;
}

.pdf-logo3{
  border-color: #f99b23 !important;
}

.text-logo1{
  color: #182f59 !important;
}

/* Define header and footer as fixed elements for each page */
.header {
  position: absolute;
  top: 0;
  width: 100%;
  height: 70px; /* Adjust height for your header */
  background-color: #fff; /* Optional background color */
  /* text-align: center; */
  z-index: 1000; /* Make sure it stays above other content */
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: auto; /* Adjust height for your footer */
  background-color: #fff; /* Footer background */
  text-align: center;
  z-index: 1000; /* Ensure it stays on top */
  /* padding-top: 10px;  */
}

.content {
  position: absolute;
  margin-top: 80px; 
  margin-bottom: 80px; 
  padding: 0 0px; 
}

/* Ensure page breaks after each page */
.page {
  position: relative !important;
  page-break-after: always;
  min-height: 755px; /* Ensure the content fits within one landscape A4 page */
}

.custom-tooltip-wrapper {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.custom-tooltip-text {
  visibility: hidden;
  opacity: 0;
  width: auto;
  max-width: 250px;
  background-color: #333;
  color: #fff;
  text-align: center;
  padding: 6px 10px;
  border-radius: 4px;
  position: absolute;
  z-index: 999;
  bottom: 120%; /* position above */
  left: 50%;
  transform: translateX(-50%);
  white-space: normal;
  font-size: 13px;
  transition: opacity 0.3s ease;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
}

.custom-tooltip-wrapper:hover .custom-tooltip-text {
  visibility: visible;
  opacity: 1;
}


.a4-preview {
  width: 210mm; /* A4 width */
  min-height: 297mm; /* A4 height */
  margin: 10px auto;
  padding: 20px;
  box-shadow: 0 0 5px rgba(0,0,0,0.3);
  background: white;
  overflow: auto;
}

.preview-a4 {
  width: 280mm;
  /* min-height: 297mm; */
  margin: auto;
  background: white;
  overflow-y: scroll;
  padding: 20px;
}

.preview-container{
  width: auto !important;
  overflow: scroll;
}

.text-editor u {
  text-decoration: underline !important;
}

@media (max-width: 768px) { /* Mobile breakpoint */
  .table-responsive {
    overflow-x: auto; /* keep horizontal scroll if needed */
  }

  .remark-cell .text-editor {
    max-height: 150px;
    min-width: 300px;
    max-width: 600px;       /* Limit height on mobile */
    overflow-y: auto;        /* Scroll inside cell if text too long */
    word-break: break-word;  /* Wrap long words */
    line-height: 1.4;
    padding-right: 0.25rem;  /* optional for scrollbar */
  }
}

.bg-orange {
  background-color: #fd7e14;
}

/* Prevent overflow inside modal */
.custom-filter-modal .modal-content {
  overflow: hidden;
}

.date-range-wrapper {
  width: 100%;
  overflow-x: auto;
}

.rdrCalendarWrapper {
  width: 100% !important;
}

.rdrMonth {
  width: 100% !important;
}

@media (max-width: 768px) {
  .rdrMonth {
    min-width: 100% !important;
  }
}

